# cmake-skeleton

./: CMakeLists.txt  README.md
docker/: Dockerfile-UT
src/: CMakeLists.txt  local.cpp  squareRoot.cpp
test/: CMakeLists.txt  calcTest.cpp  coverage.cmake  squareRootTest.cpp
